--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+    <!--Start Main Slider-->
+    <div class="main-slider-outer">
+        <!--nav area-->
+        <div class="nav-outer">
+            <div class="logo-outer">
+                <img src="https://seeklogo.com/images/F/fomo-logo-2A4EF6C08E-seeklogo.com.png" alt="logo img">
+            </div>
+            <div class="nav-bar-context">
+                <!--nav-->
+                <ul class="nav">
+                    <li><span><a href="">Home</a></span></li>
+                    <li><span><a href="">Room</a></span></li>
+                    <li><span><a href="">News</a></span></li>
+                    <li><span><a href="">Gallery</a></span></li>
+                    <li><span><a href="">About</a></span></li>
+                    <li><span><a href="">Contact</a></span></li>
+                </ul>
+                <!--nav-->
+            </div>
+        </div>
+        <!--end nav area-->
+    </div>
+    <!--End Main Slider-->
 </body>
 </html>
