--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hotello | System</title>
+    <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -17,6 +18,16 @@
                 <img src="https://seeklogo.com/images/F/fomo-logo-2A4EF6C08E-seeklogo.com.png" alt="logo img">
             </div>
             <div class="nav-bar-context">
+                <div class="search-wrapper">
+                    <div class="search-type">
+                        <span>All</span>&nbsp;
+                        <span><i class="fa-solid fa-angle-down"></i></span>
+                    </div>
+                    <input type="search" placeholder="search here">
+                    <div class="search-icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                </div>
                 <!--nav-->
                 <ul class="nav">
                     <li><span><a href="">Home</a></span></li>
@@ -26,6 +37,7 @@
                     <li><span><a href="">About</a></span></li>
                     <li><span><a href="">Contact</a></span></li>
                 </ul>
+                <button class="book-button">Book Now</button>
                 <!--nav-->
             </div>
         </div>
