--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body class="body">
+
+    <div class="social-outer"></div>
     <!--Start Main Slider-->
     <div class="main-slider-outer">
         <!--nav area-->
