Created sidebar and items

--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="body">
-
-    <div class="social-outer"></div>
+    <!--Social area-->
+    <div class="social-outer">
+        <div class="social-inner-wrap">
+            <div class="social-logo"><i class="fa-brands fa-youtube"></i></div>
+            <div class="slide-context">Youtube</div>
+        </div>
+        <div class="social-inner-wrap">
+            <div class="social-logo"><i class="fa-brands fa-facebook-f"></i></div>
+            <div class="slide-context">Facebook</div>
+        </div>
+        <div class="social-inner-wrap">
+            <div class="social-logo"><i class="fa-brands fa-twitter"></i></div>
+            <div class="slide-context">Twitter</div>
+        </div>
+        <div class="social-inner-wrap">
+            <div class="social-logo"><i class="fa-brands fa-linkedin-in"></i></div>
+            <div class="slide-context">Linkedin</div>
+        </div>
+    </div>
+    <!--Social area-->
     <!--Start Main Slider-->
     <div class="main-slider-outer">
         <!--nav area-->
@@ -32,11 +50,11 @@
                 </div>
                 <!--nav-->
                 <ul class="nav">
-                    <li><span><a href="">Home</a></span></li>
-                    <li><span><a href="">Room</a></span></li>
-                    <li><span><a href="">News</a></span></li>
-                    <li><span><a href="">Gallery</a></span></li>
-                    <li><span><a href="">About</a></span></li>
+                    <li><span><a href="">Home</a></span><div class="line"></div></li>
+                    <li><span><a href="">Room</a></span><div class="line"></div></li>
+                    <li><span><a href="">News</a></span><div class="line"></div></li>
+                    <li><span><a href="">Gallery</a></span><div class="line"></div></li>
+                    <li><span><a href="">About</a></span><div class="line"></div></li>
                     <li><span><a href="">Contact</a></span></li>
                 </ul>
                 <button class="book-button">Book Now</button>
