Created selector options

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:input="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -62,6 +62,44 @@
             </div>
         </div>
         <!--end nav area-->
+        <!--slider-middle-text-->
+        <div class="middle-text-outer">
+            <h1 class="book-today-text">Book Today</h1>
+            <h2 class="weekend-offer-text">HOT WEEKEND OFFER</h2>
+        </div>
+        <!--slider-middle-text-->
+        <!--booking-widget-->
+        <div class="widget-main-outer">
+            <div class="widget-inner">
+                <div class="widget-components-wrapper"><input type="date" name="" id=""></div>
+                <div class="widget-components-wrapper">
+                    <select>
+                        <option value="#" disabled selected>Guests</option>
+                        <option value="#">1</option>
+                        <option value="#">2</option>
+                        <option value="#">3</option>
+                        <option value="#">4</option>
+                        <option value="#">5</option>
+                        <option value="#">6</option>
+                    </select>
+                </div>
+                <div class="widget-components-wrapper">
+                    <select>
+                        <option value="#" disabled selected>Children</option>
+                        <option value="#">1</option>
+                        <option value="#">2</option>
+                        <option value="#">3</option>
+                        <option value="#">4</option>
+                        <option value="#">5</option>
+                        <option value="#">6</option>
+                    </select>
+                </div>
+                <div class="widget-components-wrapper">
+                    <input type="submit" value="Check Rates">
+                </div>
+            </div>
+        </div>
+        <!--booking-widget-->
     </div>
     <!--End Main Slider-->
 </body>
