Created selector options

--- a/index.html
+++ b/index.html
@@ -8,99 +8,172 @@
     <title>Hotello | System</title>
     <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+    <link type="image/png" rel="icon" href="favicon.png">
 </head>
 <body class="body">
-    <!--Social area-->
-    <div class="social-outer">
-        <div class="social-inner-wrap">
-            <div class="social-logo"><i class="fa-brands fa-youtube"></i></div>
-            <div class="slide-context">Youtube</div>
+<!--Social area-->
+<div class="social-outer">
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-youtube"></i></div>
+        <div class="slide-context">Youtube</div>
+    </div>
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-facebook-f"></i></div>
+        <div class="slide-context">Facebook</div>
+    </div>
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-twitter"></i></div>
+        <div class="slide-context">Twitter</div>
+    </div>
+    <div class="social-inner-wrap">
+        <div class="social-logo"><i class="fa-brands fa-linkedin-in"></i></div>
+        <div class="slide-context">Linkedin</div>
+    </div>
+</div>
+<!--Social area-->
+<!--Start Main Slider-->
+<div class="main-slider-outer">
+    <!--nav area-->
+    <div class="nav-outer">
+        <div class="logo-outer">
+            <img src="https://seeklogo.com/images/F/fomo-logo-2A4EF6C08E-seeklogo.com.png" alt="logo img">
         </div>
-        <div class="social-inner-wrap">
-            <div class="social-logo"><i class="fa-brands fa-facebook-f"></i></div>
-            <div class="slide-context">Facebook</div>
-        </div>
-        <div class="social-inner-wrap">
-            <div class="social-logo"><i class="fa-brands fa-twitter"></i></div>
-            <div class="slide-context">Twitter</div>
-        </div>
-        <div class="social-inner-wrap">
-            <div class="social-logo"><i class="fa-brands fa-linkedin-in"></i></div>
-            <div class="slide-context">Linkedin</div>
+        <div class="nav-bar-context">
+            <div class="search-wrapper">
+                <div class="search-type">
+                    <span>All</span>&nbsp;
+                    <span><i class="fa-solid fa-angle-down"></i></span>
+                </div>
+                <input type="search" placeholder="search here">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <!--nav-->
+            <ul class="nav">
+                <li><span><a href="">Home</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">Room</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">News</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">Gallery</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">About</a></span>
+                    <div class="line"></div>
+                </li>
+                <li><span><a href="">Contact</a></span></li>
+            </ul>
+            <button class="book-button">Book Now</button>
+            <!--nav-->
         </div>
     </div>
-    <!--Social area-->
-    <!--Start Main Slider-->
-    <div class="main-slider-outer">
-        <!--nav area-->
-        <div class="nav-outer">
-            <div class="logo-outer">
-                <img src="https://seeklogo.com/images/F/fomo-logo-2A4EF6C08E-seeklogo.com.png" alt="logo img">
-            </div>
-            <div class="nav-bar-context">
-                <div class="search-wrapper">
-                    <div class="search-type">
-                        <span>All</span>&nbsp;
-                        <span><i class="fa-solid fa-angle-down"></i></span>
-                    </div>
-                    <input type="search" placeholder="search here">
-                    <div class="search-icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </div>
-                </div>
-                <!--nav-->
-                <ul class="nav">
-                    <li><span><a href="">Home</a></span><div class="line"></div></li>
-                    <li><span><a href="">Room</a></span><div class="line"></div></li>
-                    <li><span><a href="">News</a></span><div class="line"></div></li>
-                    <li><span><a href="">Gallery</a></span><div class="line"></div></li>
-                    <li><span><a href="">About</a></span><div class="line"></div></li>
-                    <li><span><a href="">Contact</a></span></li>
-                </ul>
-                <button class="book-button">Book Now</button>
-                <!--nav-->
-            </div>
-        </div>
-        <!--end nav area-->
-        <!--slider-middle-text-->
-        <div class="middle-text-outer">
-            <h1 class="book-today-text">Book Today</h1>
-            <h2 class="weekend-offer-text">HOT WEEKEND OFFER</h2>
-        </div>
-        <!--slider-middle-text-->
-        <!--booking-widget-->
-        <div class="widget-main-outer">
-            <div class="widget-inner">
-                <div class="widget-components-wrapper"><input type="date" name="" id=""></div>
-                <div class="widget-components-wrapper">
-                    <select>
-                        <option value="#" disabled selected>Guests</option>
-                        <option value="#">1</option>
-                        <option value="#">2</option>
-                        <option value="#">3</option>
-                        <option value="#">4</option>
-                        <option value="#">5</option>
-                        <option value="#">6</option>
-                    </select>
-                </div>
-                <div class="widget-components-wrapper">
-                    <select>
-                        <option value="#" disabled selected>Children</option>
-                        <option value="#">1</option>
-                        <option value="#">2</option>
-                        <option value="#">3</option>
-                        <option value="#">4</option>
-                        <option value="#">5</option>
-                        <option value="#">6</option>
-                    </select>
-                </div>
-                <div class="widget-components-wrapper">
-                    <input type="submit" value="Check Rates">
-                </div>
-            </div>
-        </div>
-        <!--booking-widget-->
+    <!--end nav area-->
+    <!--slider-middle-text-->
+    <div class="middle-text-outer">
+        <h1 class="book-today-text">Book Today</h1>
+        <h2 class="weekend-offer-text">HOT WEEKEND OFFER</h2>
     </div>
-    <!--End Main Slider-->
+    <!--slider-middle-text-->
+    <!--booking-widget-->
+    <div class="widget-main-outer">
+        <div class="widget-inner">
+            <div class="widget-components-wrapper"><input type="date" name="" id=""></div>
+            <div class="widget-components-wrapper">
+                <select>
+                    <option value="#" disabled selected>Guests</option>
+                    <option value="#">1</option>
+                    <option value="#">2</option>
+                    <option value="#">3</option>
+                    <option value="#">4</option>
+                    <option value="#">5</option>
+                    <option value="#">6</option>
+                </select>
+            </div>
+            <div class="widget-components-wrapper">
+                <select>
+                    <option value="#" disabled selected>Children</option>
+                    <option value="#">1</option>
+                    <option value="#">2</option>
+                    <option value="#">3</option>
+                    <option value="#">4</option>
+                    <option value="#">5</option>
+                    <option value="#">6</option>
+                </select>
+            </div>
+            <div class="widget-components-wrapper">
+                <input type="submit" value="Check Rates">
+            </div>
+        </div>
+    </div>
+    <!--booking-widget-->
+</div>
+<!--End Main Slider-->
+<!--about-outer-->
+<div class="about-wrapper">
+    <div class="about-inner">
+        <div class="about-text-outer">
+            <h1 class="welcome-text">
+                Welcome
+            </h1>
+            <h1 class="enjoy-text">
+                Enjoy Your Stay <br> in Our Hotel
+            </h1>
+        </div>
+    </div>
+    <div class="about-inner">
+        <p>Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+    </div>
+    <div class="about-inner">
+        <p>Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua.</p>
+    </div>
+</div>
+<!--about-outer-->
+<!--services-area-->
+<div class="services-main-outer">
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+            <div class="show-wrapper">
+                <p>
+                    <i class="fa-solid fa-briefcase"></i>
+                </p>
+            </div>
+            <div class="hidden-wrapper"></div>
+        </div>
+    </div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+            <div class="show-wrapper">
+                <p><i class="fa-solid fa-mug-saucer"></i></p>
+            </div>
+            <div class="hidden-wrapper"></div>
+        </div>
+    </div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+            <div class="show-wrapper">
+                <p><i class="fa-solid fa-tv"></i></p>
+            </div>
+            <div class="hidden-wrapper"></div>
+        </div>
+    </div>
+    <div class="service-inner">
+        <div class="shadow-wrapper">
+            <div class="show-wrapper">
+                <p><i class="fa-solid fa-bowl-food"></i></p>
+            </div>
+            <div class="hidden-wrapper"></div>
+        </div>
+    </div>
+</div>
+<!--services-area-->
 </body>
 </html>
