finished hidden wrapper

--- a/index.html
+++ b/index.html
@@ -145,32 +145,86 @@
                 <p>
                     <i class="fa-solid fa-briefcase"></i>
                 </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
             </div>
-            <div class="hidden-wrapper"></div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
         </div>
     </div>
     <div class="service-inner">
         <div class="shadow-wrapper">
             <div class="show-wrapper">
-                <p><i class="fa-solid fa-mug-saucer"></i></p>
+                <p>
+                    <i class="fa-solid fa-mug-saucer"></i>
+                </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
             </div>
-            <div class="hidden-wrapper"></div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
         </div>
     </div>
     <div class="service-inner">
         <div class="shadow-wrapper">
             <div class="show-wrapper">
-                <p><i class="fa-solid fa-tv"></i></p>
+                <p>
+                    <i class="fa-solid fa-tv"></i>
+                </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
             </div>
-            <div class="hidden-wrapper"></div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
         </div>
     </div>
     <div class="service-inner">
         <div class="shadow-wrapper">
             <div class="show-wrapper">
-                <p><i class="fa-solid fa-bowl-food"></i></p>
+                <p>
+                    <i class="fa-solid fa-bowl-food"></i>
+                </p>
+                <h2>
+                    Lorem ipsum dolor.
+                </h2>
             </div>
-            <div class="hidden-wrapper"></div>
+            <div class="hidden-wrapper">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+            </div>
         </div>
     </div>
 </div>
