--- a/index.html
+++ b/index.html
@@ -229,5 +229,14 @@
     </div>
 </div>
 <!--services-area-->
+<!--blog area-->
+<div class="blog-outer">
+    <div class="blog-inner">
+        <div class="blog-items-wrapper"></div>
+        <div class="blog-items-wrapper"></div>
+        <div class="blog-items-wrapper"></div>
+    </div>
+</div>
+<!--blog area-->
 </body>
 </html>
