--- a/index.html
+++ b/index.html
@@ -232,9 +232,51 @@
 <!--blog area-->
 <div class="blog-outer">
     <div class="blog-inner">
-        <div class="blog-items-wrapper"></div>
-        <div class="blog-items-wrapper"></div>
-        <div class="blog-items-wrapper"></div>
+        <div class="blog-items-wrapper">
+            <div class="blog-items-img-wrap i1"></div>
+            <div class="blog-desc">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit.
+                    Aliquam, aliquid, consequuntur
+                    cupiditate minus nam necessitatibus
+                    nisi non numquam, officiis omnis quos
+                    veniam veritatis! Aliquam aliquid
+                    commodi delectus eveniet id impedit
+                    ipsum iusto magnam, maxime quam?
+                </p>
+            </div>
+        </div>
+        <div class="blog-items-wrapper">
+            <div class="blog-items-img-wrap i2"></div>
+            <div class="blog-desc">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit.
+                    Aliquam, aliquid, consequuntur
+                    cupiditate minus nam necessitatibus
+                    nisi non numquam, officiis omnis quos
+                    veniam veritatis! Aliquam aliquid
+                    commodi delectus eveniet id impedit
+                    ipsum iusto magnam, maxime quam?
+                </p>
+            </div>
+        </div>
+        <div class="blog-items-wrapper">
+            <div class="blog-items-img-wrap i3"></div>
+            <div class="blog-desc">
+                <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit.
+                    Aliquam, aliquid, consequuntur
+                    cupiditate minus nam necessitatibus
+                    nisi non numquam, officiis omnis quos
+                    veniam veritatis! Aliquam aliquid
+                    commodi delectus eveniet id impedit
+                    ipsum iusto magnam, maxime quam?
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 <!--blog area-->
